test/fixedbugs/bug280.go
// errorcheck

// Copyright 2010 The Go Authors.  All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

// http://code.google.com/p/go/issues/detail?id=808

package main

type A [...]int	// ERROR "outside of array literal"


